Fix font size on mobile for organizers list

--- a/src/pages/organizers.scss
+++ b/src/pages/organizers.scss
@@ -71,7 +71,14 @@
   transition: transform 0.3s;
   transition-delay: 75ms;
   z-index: 1;
-  font-size: 1.5em;
+  font-size: 1.5rem;
+
+  @include breakpoint(sm) {
+    font-size: 2rem;
+  }
+  @include breakpoint(md) {
+    font-size: 3rem;
+  }
 }
 .team-member-title {
   display: block;
@@ -80,5 +87,12 @@
   line-height: 1.2;
   transform: translateY(300%);
   transition-delay: 100ms;
-  font-size: 0.75em;
+  font-size: 1rem;
+
+  @include breakpoint(sm) {
+    font-size: 1.5rem;
+  }
+  @include breakpoint(md) {
+    font-size: 2rem;
+  }
 }
